<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">静静</string>
    <string name="ok">确定</string>
    <string name="str_select">选取</string>
    <string name="cancel">取消</string>
    <string name="hall_hot">最受追捧</string>
    <string name="hall_time">在线</string>
    <string name="hall_skill">技能</string>
    <string name="hall_new">新人</string>
    <string name="login">登录</string>
    <string name="str_set_passwd">找回密码</string>
    <string name="str_set_passwd_content">重置密码（6-12字符）</string>
    <string name="str_set_passwd_title">若你未绑定手机号，请选择邮箱找回</string>
    <string name="register">注册</string>
    <string name="hall">交友</string>
    <string name="rank">排行</string>
    <string name="hot_rank">热榜</string>
    <string name="message">消息</string>
    <string name="mine">我的</string>
    <string name="find">发现</string>
    <string name="submit">提交</string>
    <string name="pass">跳过</string>
    <string name="setting">设置</string>
    <string name="rank_list">排行榜</string>
    <string name="back">返回</string>
    <string name="manage">管理</string>
    <string name="private_page">个人主页</string>
    <string name="photo_album">相册列表</string>
    <string name="photo_public">公开相册</string>
    <string name="follower">我的好友</string>
    <string name="str_friends">好友</string>
    <string name="dynamic">我的动态</string>
    <string name="str_my_follower">关注人的动态</string>
    <string name="myfans">粉丝</string>
    <string name="myfollower">关注</string>
    <string name="myfriends">关注的人</string>
    <string name="voucher_center">充值中心</string>
    <string name="get_reward">领取奖励</string>
    <string name="album_manage">相册管理</string>
    <string name="integral_center">积分商城</string>
    <string name="gifts">礼物</string>
    <string name="send_gift">已送出的礼物</string>
    <string name="receive_gift">已收到的礼物</string>
    <string name="str_send_gifts">送礼</string>
    <string name="invite_friends">积分奖励</string>
    <string name="str_points">攻略</string>
    <string name="str_activities">活动专区</string>
    <string name="str_game_three">游戏专区</string>
    <string name="str_title_three">时时彩</string>
    <string name="un_read">对方未读</string>
    <string name="pull_to_refresh_pull_label">下拉刷新</string>
    <string name="pull_to_refresh_release_label">松开刷新</string>
    <string name="pull_to_refresh_refreshing_label">正在刷新</string>
    <string name="pull_to_load_pull_label">上拉加载更多</string>
    <string name="pull_to_load_release_label">松开加载</string>
    <string name="pull_to_load_loading_label">正在加载</string>
    <string name="loading">正在加载&#8230;</string>
    <string name="no_pic">图片不存在！</string>
    <string name="nosdcard">没有SD卡</string>
    <string name="submitting">正在提交&#8230;</string>
    <string name="input_album_name">1.输入相册名称</string>
    <string name="input_album_loyalty">2.设置访问魅力贡献值</string>
    <string name="share_title">分享到</string>
    <string name="share_to_qq">QQ好友</string>
    <string name="share_to_qqzone">QQ空间</string>
    <string name="share_to_winxin">微信好友</string>
    <string name="share_to_winxinline">微信朋友圈</string>
    <string name="share_to_sina">新浪微博</string>
    <string name="share_to_tencent">腾讯微博</string>
    <string name="report_select_reason">请选择举报原因</string>
    <string name="report_title">该用户涉及以下内容违规：</string>
    <string name="report_abuse">恶意辱骂</string>
    <string name="report_sex">黄色信息</string>
    <string name="report_ad">垃圾广告</string>
    <string name="report_political">政治敏感信息</string>
    <string name="report_other">其他</string>
    <string name="more">更多</string>
    <string name="openpicfaill">图片打开失败，请稍后再试！</string>
    <string name="my_space">我的主页</string>
    <string name="take_photo">拍照</string>
    <string name="choose_picutre">图片</string>
    <string name="my_dynamic">我的动态</string>
    <string name="queena_dynamic">她的动态</string>
    <string name="str_king_dynamic">他的动态</string>
    <string name="str_my_gift">我的礼物</string>
    <string name="str_he_gift">他的礼物</string>
    <string name="str_her_gift">她的礼物</string>
    <string name="str_dynamic">动态</string>
    <string name="delete">删除</string>
    <string name="all_dynamic">全部回复</string>
    <string name="space_detail">动态详情</string>
    <string name="save">保存</string>
    <string name="weibosdk_demo_not_support_api_hint">微博客户端不支持 SDK 分享或微博客户端未安装或微博客户端是非官方版本。</string>
    <string name="format1"><xliff:g id="format">%2d</xliff:g></string>
    <string name="format2"><xliff:g id="format">yyyyMMdd</xliff:g></string>
    <string name="about_beiai">Copyright@2013&#8211;2014土人科技有限公司</string>
    <string name="check_new_version">检查新版本</string>
    <string name="version_update_date">版本更新日期</string>
    <string name="about_beiai2">关于静静</string>
    <string name="updateinfo_content">已经是最新版本！</string>
    <string name="updateinfo_title">检测到最新版的静静，是否下载？</string>
    <string name="updateinfo_tolow">您的版本号过低，请下载最新版本的静静!</string>
    <string name="apk_download_error">下载应用文件失败!</string>
    <string name="need_login">你还没有登录，是否去登录？</string>
    <string name="cofirm_exit">确定退出？</string>
    <string name="to_login">去登录</string>
    <string name="str_i_know">我知道啦</string>
    <string name="online">在线</string>
    <string name="offline">离线</string>
    <string name="near">附近</string>
    <string name="str_message_notify">消息通知</string>
    <string name="str_message_toast">开启后，系统将自动屏蔽23：00&#8211;08：00间的任何提醒 </string>
    <string name="str_no_data">暂无数据</string>
    <string name="str_logining">正在登录</string>
    <string name="str_reset_success">默认密码已发到该邮箱</string>
    <string name="str_gift_content">赠送给%1$s的礼物%2$s将会增加你对TA的魅力贡献值%3$s点，并提高TA的魅力值%4$s点！</string>
    <string name="str_gift_pendat_content">赠送对方%1$s挂件礼物，让对方出现在大厅是戴上%2$s,</string>
    <string name="input_invite">请输入邀请码</string>
    <string name="share_mm">静静分享</string>
    <string name="share_content">我是%1$s，我在静静，快来找我吧</string>
    <string name="share_mm1">分享美女</string>
    <string name="share_content1">超人气应用《静静》,网络不再虚拟，静静拉近距离</string>
    <string name="share_success">分享成功</string>
    <string name="goto_rechanrge">去充值</string>
    <string name="no_share">您还未分享，暂时不能领取</string>
    <string name="no_weixin">您还没有安装微信客户端，请先下载微信客户端</string>
    <string name="operate_faile">操作失败</string>
    <string name="recharge_context">为了您能够正常充值，请在网络畅通状态下购买，购买过程中，请勿退出应用</string>
    <string name="delete_follow">取消关注</string>
    <string name="delete_black">取消拉黑</string>
    <string name="str_remark">备注</string>
    <string name="str_sdcard_not_exist">sd卡不存在</string>
    <string name="str_upload_head">正在上传头像</string>
    <string name="str_attention_people">关注的人</string>
    <string name="skill_join">%1$s 人参与</string>
    <string name="str_want_to_see_user">想看到的用户</string>
    <string name="str_view_other_task">查看其它任务</string>
    <string name="sound">声音</string>
    <string name="shake">震动</string>
    <string name="next_operate">下一步</string>
    <string name="invite">邀请码</string>
    <string name="who_saw_me">谁看过我</string>
    <string name="who_saw_me1">看过我的人</string>
    <string name="xiaopei">静静</string>
    <string name="str_patronize">宠幸</string>
    <string name="str_chat_gueess_finger_failed">本局已失效--超过1分钟或已被其他用户抢中</string>
    <string name="str_chat_gueess_finger_private_failed">本局已失效--超过1分钟</string>
    <string name="str_need_reidentity">更换头像，须重新申请认证</string>
    <string name="str_at_maxnum">最多只能@3个用户</string>
    <string name="str_mobile_phone_content">请填写手机号，仅限中国大陆手机。手机号仅用系统中绑定，可作帐号登录静静，注意：手机号登录需要设置对应的密码；</string>
    <string name="str_mobile_phone_content1">任何人看不到您的手机号码</string>
    <string name="str_mobile_phone_null">请输入你的手机号</string>
    <string name="str_mobile_phone_error">请输入正确的手机号</string>
    <string name="str_set_password_hint">设置密码（6至16位）</string>
    <string name="str_right_code">请输入正确的验证码</string>
    <string name="str_code_no_null">请输入验证码</string>
    <string name="str_bind_phone_ok">您已成功绑定手机号：</string>
    <string name="str_bind_phone_hint">注：暂时不能更换手机号</string>
    <string name="str_register_activity1">注册（1/2）</string>
    <string name="str_register_activity2">注册（2/2）</string>
    <string name="str_register_activity3">注册（3/3）</string>
    <string name="str_phone_black">手机号找回</string>
    <string name="str_email_black">邮箱找回</string>
    <string name="str_about_me_title">关于我</string>
    <string name="str_clean_dynamic_content">是否确认清空动态？</string>
    <string name="str_main_select">筛选</string>
    <string name="input_newpassword1">请输入新密码</string>
    <string name="input_newpassword2">请再次输入新密码</string>
    <string name="str_scene_shop">道具商城</string>
    <string name="str_find_apps">发现应用</string>
    <string name="string_crashandler_error_info">很抱歉,程序出现异常,即将关闭.</string>
    <string name="str_my_skills">我的技能</string>
    <string name="str_man_my_skill">我的打赏</string>
    <string name="str_my_album">我的相册</string>
    <string name="str_others_skills">她的技能</string>
    <string name="str_other_man_skills">他的技能</string>
    <string name="str_others_album">她的照片</string>
    <string name="str_others_album1">他的照片</string>
    <string name="str_skills">技能</string>
    <string name="str_new_skills">新建技能</string>
    <string name="str_describe">描述</string>
    <string name="str_need_gifts">需要礼物</string>
    <string name="str_give_gift">赠送\n礼物</string>
    <string name="str_need_gift">需要\n礼物</string>
    <string name="str_gifts_count">礼物数量</string>
    <string name="str_limit_six_length">不超过8个字</string>
    <string name="str_not_lower_ten_length">不少于10个字</string>
    <string name="str_select_gift">选择礼物</string>
    <string name="str_please_select_gift">请选择礼物</string>
    <string name="str_skill_name_not_empty">技能名称不能为空</string>
    <string name="str_describe_not_lower_ten_length">技能描述不能够少于10个字</string>
    <string name="str_submit_failed">提交失败</string>
    <string name="str_select_need_gift">请选择需要的礼物</string>
    <string name="str_get_gift_error">获取礼物失败</string>
    <string name="str_skill_detail">技能详情</string>
    <string name="str_man_skill_detail">打赏详情</string>
    <string name="str_please_graded">送指定礼物后才可评分</string>
    <string name="str_enjoy_step">拍下>打赏方支付>参与方确认>合作>完成</string>
    <string name="str_send_skill_gift_step">送指定礼物>发布方确认>合作>点评</string>
    <string name="str_delete_skill">删除技能</string>
    <string name="str_edit_skill">编辑技能</string>
    <string name="str_delete_enjoy">删除打赏</string>
    <string name="str_edit_enjoy">编辑打赏</string>
    <string name="str_skill_delete_mind">删除后技能将不在主页展示，确定需要删除吗？</string>
    <string name="str_male_skill_detele_mind">删除后打赏将不在主页展示，确定需要删除吗？</string>
    <string name="str_check_relationsship">正在检测魅力贡献值</string>
    <string name="str_send_skill_gift">正在赠送</string>
    <string name="str_gold_is_not_enough">金币不足，充点小钱花花吧~~~</string>
    <string name="str_silver_is_not_enough">银币不足，去免费赚点吧~</string>
    <string name="str_have_been_graded">您已评分</string>
    <string name="str_give_her_graded">给她评分</string>
    <string name="str_click_the_stars_to_score">轻点星星来评分</string>
    <string name="str_rating_score_failed">评分失败</string>
    <string name="str_loading_failed">加载失败</string>
    <string name="str_add_skill_failed">提交失败，技能礼物的魅力贡献值小于私聊门槛，会导致送礼后无法聊天（注：魅力贡献值=魅力值)</string>
    <string name="str_please_enjoy">求赏(求)</string>
    <string name="str_give_enjoy">打赏(赏)</string>
    <string name="str_give">打赏</string>
    <string name="str_interested_in">我有兴趣</string>
    <string name="str_input_phone">输入手机号</string>
    <string name="str_input_code">输入验证码</string>
    <string name="str_get_code">获取验证码</string>
    <string name="chose_photo">选择照片</string>
    <string name="from_camera">拍照</string>
    <string name="from_gallery">从手机相册选择</string>
    <string name="from_network">网络获取图片</string>
    <string name="clean_chat">清空聊天记录</string>
    <string name="add_black">拉黑并举报</string>
    <string name="reward_dialog_join_time">成功参加悬赏</string>
    <string name="reward_dialog_join_content">(匿名参与，仅赏主可见)</string>
    <string name="reward_dialog_join_content_str">参加悬赏后请记得秀出相应表演哦，恶意欺骗等行为将会受到处罚哟！</string>
</resources>