<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/pop_bg_white90"
    android:orientation="vertical" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/default_height_popuptitle"
        android:background="@drawable/main_bg_pink2"
        android:gravity="center"
        android:text="@string/share_title"
        android:textColor="@color/white"
        android:textSize="@dimen/default_textsize_13" />

    <TextView
        android:id="@+id/share_qq"
        android:layout_width="match_parent"
        android:layout_height="@dimen/default_height_popuplist"
        android:background="@drawable/click_selector_peach"
        android:gravity="center"
        android:text="@string/share_to_qq"
        android:textColor="@color/peach"
        android:textSize="@dimen/default_textsize_13" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/main_line" >
    </ImageView>
    <TextView
        android:id="@+id/share_qqzone"
        android:layout_width="match_parent"
        android:layout_height="@dimen/default_height_popuplist"
        android:background="@drawable/click_selector_peach"
        android:gravity="center"
        android:text="@string/share_to_qqzone"
        android:textColor="@color/peach"
        android:textSize="@dimen/default_textsize_13" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/main_line" >
    </ImageView>

    <TextView
        android:id="@+id/share_weixin"
        android:layout_width="match_parent"
        android:layout_height="@dimen/default_height_popuplist"
        android:background="@drawable/click_selector_peach"
        android:gravity="center"
        android:text="@string/share_to_winxin"
        android:textColor="@color/peach"
        android:textSize="@dimen/default_textsize_13" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/main_line" >
    </ImageView>

    <TextView
        android:id="@+id/share_weixinline"
        android:layout_width="match_parent"
        android:layout_height="@dimen/default_height_popuplist"
        android:background="@drawable/click_selector_peach"
        android:gravity="center"
        android:text="@string/share_to_winxinline"
        android:textColor="@color/peach"
        android:textSize="@dimen/default_textsize_13" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/main_line" >
    </ImageView>

    <TextView
        android:id="@+id/share_sina"
        android:layout_width="match_parent"
        android:layout_height="@dimen/default_height_popuplist"
        android:background="@drawable/click_selector_peach"
        android:gravity="center"
        android:text="@string/share_to_sina"
        android:textColor="@color/peach"
        android:textSize="@dimen/default_textsize_13" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/main_line" >
    </ImageView>

    <TextView
        android:id="@+id/share_tencent"
        android:layout_width="match_parent"
        android:layout_height="@dimen/default_height_popuplist"
        android:background="@drawable/click_selector_peach"
        android:gravity="center"
        android:text="@string/share_to_tencent"
        android:textColor="@color/peach"
        android:textSize="@dimen/default_textsize_13" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/main_line" >
    </ImageView>

    <TextView
        android:id="@+id/share_cancel"
        android:layout_width="match_parent"
        android:layout_height="@dimen/default_height_popuplist"
        android:background="@drawable/click_selector_peach"
        android:gravity="center"
        android:text="@string/cancel"
        android:textColor="@color/black"
        android:textSize="@dimen/default_textsize_13" />

</LinearLayout>