<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/pop_bg_white90"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/report_title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/default_height_popuptitle"
        android:background="@drawable/main_bg_pink2"
        android:gravity="center"
        android:text="@string/report_title"
        android:textColor="@color/white"
        android:textSize="@dimen/default_textsize_13" />

    <TextView
        android:id="@+id/report_abuse"
        android:layout_width="match_parent"
        android:layout_height="@dimen/default_height_popuplist"
        android:background="@drawable/click_selector_peach"
        android:gravity="center"
        android:text="@string/report_abuse"
        android:textColor="@color/peach"
        android:textSize="@dimen/default_textsize_13" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/main_line" >
    </ImageView>

    <TextView
        android:id="@+id/report_sex"
        android:layout_width="match_parent"
        android:layout_height="@dimen/default_height_popuplist"
        android:background="@drawable/click_selector_peach"
        android:gravity="center"
        android:text="@string/report_sex"
        android:textColor="@color/peach"
        android:textSize="@dimen/default_textsize_13" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/main_line" >
    </ImageView>

    <TextView
        android:id="@+id/report_ad"
        android:layout_width="match_parent"
        android:layout_height="@dimen/default_height_popuplist"
        android:background="@drawable/click_selector_peach"
        android:gravity="center"
        android:text="@string/report_ad"
        android:textColor="@color/peach"
        android:textSize="@dimen/default_textsize_13" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/main_line" >
    </ImageView>

    <TextView
        android:id="@+id/report_political"
        android:layout_width="match_parent"
        android:layout_height="@dimen/default_height_popuplist"
        android:background="@drawable/click_selector_peach"
        android:gravity="center"
        android:text="@string/report_political"
        android:textColor="@color/peach"
        android:textSize="@dimen/default_textsize_13" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/main_line" >
    </ImageView>

    <TextView
        android:id="@+id/report_other"
        android:layout_width="match_parent"
        android:layout_height="@dimen/default_height_popuplist"
        android:background="@drawable/click_selector_peach"
        android:gravity="center"
        android:text="@string/report_other"
        android:textColor="@color/peach"
        android:textSize="@dimen/default_textsize_13" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/main_line" >
    </ImageView>

    <TextView
        android:id="@+id/report_cancel"
        android:layout_width="match_parent"
        android:layout_height="@dimen/default_height_popuplist"
        android:background="@drawable/click_selector_peach"
        android:gravity="center"
        android:text="@string/cancel"
        android:textColor="@color/black"
        android:textSize="@dimen/default_textsize_13" />

</LinearLayout>