<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/pop_bg_white90"
    android:orientation="vertical" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/default_height_popuptitle"
        android:background="@drawable/main_bg_pink2"
        android:gravity="center"
        android:text="@string/chose_photo"
        android:textColor="@color/white"
        android:textSize="@dimen/default_textsize_13" />

    <TextView
        android:id="@+id/pop_open_photograph"
        android:layout_width="match_parent"
        android:layout_height="@dimen/default_height_popuplist"
        android:background="@drawable/click_selector_carema"
        android:gravity="center"
        android:text="@string/from_camera"
        android:textColor="@color/peach"
        android:textSize="@dimen/default_textsize_13" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/main_line" >
    </ImageView>

    <TextView
        android:id="@+id/pop_open_picture"
        android:layout_width="match_parent"
        android:layout_height="@dimen/default_height_popuplist"
        android:background="@drawable/click_selector_carema"
        android:gravity="center"
        android:text="@string/from_gallery"
        android:textColor="@color/peach"
        android:textSize="@dimen/default_textsize_13" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/main_line" >
    </ImageView>

    <TextView
        android:id="@+id/pop_net_picture"
        android:layout_width="match_parent"
        android:layout_height="@dimen/default_height_popuplist"
        android:background="@drawable/click_selector_carema"
        android:gravity="center"
        android:text="@string/from_network"
        android:textSize="@dimen/default_textsize_13"
        android:visibility="gone" />

    <TextView
        android:id="@+id/pop_close"
        android:layout_width="match_parent"
        android:layout_height="@dimen/default_height_popuplist"
        android:background="@drawable/click_selector_carema"
        android:gravity="center"
        android:text="@string/cancel"
        android:textColor="@color/black"
        android:textSize="@dimen/default_textsize_13" />

</LinearLayout>