<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/transparent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/default_height_popuptitle"
        android:background="@drawable/main_bg_pink2"
        android:gravity="center"
        android:text="@string/more"
        android:textColor="@color/white"
        android:textSize="@dimen/default_textsize_13"
        android:visibility="gone" />

    <TextView
        android:id="@+id/more_clean_chat"
        android:layout_width="match_parent"
        android:layout_height="@dimen/default_height_popuplist"
        android:background="@drawable/click_selector_peach"
        android:gravity="center"
        android:text="@string/clean_chat"
        android:textColor="@color/black"
        android:textSize="@dimen/default_textsize_16" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/main_line" >
    </ImageView>

    <TextView
        android:id="@+id/more_add_black"
        android:layout_width="match_parent"
        android:layout_height="@dimen/default_height_popuplist"
        android:background="@drawable/click_selector_peach"
        android:gravity="center"
        android:text="@string/add_black"
        android:textColor="@color/black"
        android:textSize="@dimen/default_textsize_16" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/main_line" >
    </ImageView>

    <TextView
        android:id="@+id/more_cancel"
        android:layout_width="match_parent"
        android:layout_height="@dimen/default_height_popuplist"
        android:layout_marginTop="10dip"
        android:background="@drawable/click_selector_peach"
        android:gravity="center"
        android:text="@string/cancel"
        android:textColor="@color/black"
        android:textSize="@dimen/default_textsize_16" />

</LinearLayout>